@@ -88,6 +88,9 @@ DllMain(HANDLE hInstDll,
  */
 ////////////////////////////////////////////////////////////////////////////////
 
+/*
+ * @unimplemented
+ */
 VOID
 SNMP_FUNC_TYPE
 SnmpSvcAddrIsIpx(void* unknown, void* unknown2)
@@ -95,6 +98,10 @@ SnmpSvcAddrIsIpx(void* unknown, void* unknown2)
     UNIMPLEMENTED
 }
 
+
+/*
+ * @unimplemented
+ */
 VOID
 SNMP_FUNC_TYPE
 SnmpSvcAddrToSocket(void* unknown, void* unknown2)
@@ -102,6 +109,10 @@ SnmpSvcAddrToSocket(void* unknown, void* unknown2)
     UNIMPLEMENTED
 }
 
+
+/*
+ * @unimplemented
+ */
 VOID
 SNMP_FUNC_TYPE
 SnmpSvcGetEnterpriseOID(void* unknown, void* unknown2)
@@ -109,6 +120,10 @@ SnmpSvcGetEnterpriseOID(void* unknown, void* unknown2)
     UNIMPLEMENTED
 }
 
+
+/*
+ * @implemented
+ */
 LPVOID
 SNMP_FUNC_TYPE
 SnmpUtilMemAlloc(UINT nBytes)
@@ -118,6 +133,10 @@ SnmpUtilMemAlloc(UINT nBytes)
     return pMem;
 }
 
+
+/*
+ * @implemented
+ */
 VOID
 SNMP_FUNC_TYPE
 SnmpUtilMemFree(LPVOID pMem)
@@ -125,6 +144,10 @@ SnmpUtilMemFree(LPVOID pMem)
 	GlobalFree(pMem);
 }
 
+
+/*
+ * @unimplemented
+ */
 LPVOID
 SNMP_FUNC_TYPE
 SnmpUtilMemReAlloc(LPVOID pMem, UINT nBytes)
@@ -133,6 +156,10 @@ SnmpUtilMemReAlloc(LPVOID pMem, UINT nBytes)
     return pMem;
 }
 
+
+/*
+ * @implemented
+ */
 VOID
 SNMP_FUNC_TYPE
 SnmpSvcInitUptime()
@@ -140,6 +167,10 @@ SnmpSvcInitUptime()
     dwUptimeStartTicks = GetTickCount();
 }
 
+
+/*
+ * @implemented
+ */
 DWORD 
 SNMP_FUNC_TYPE
 SnmpSvcGetUptime()
@@ -150,6 +181,10 @@ SnmpSvcGetUptime()
     return dwUptime;
 }
 
+
+/*
+ * @unimplemented
+ */
 VOID
 SNMP_FUNC_TYPE
 SnmpSvcSetLogLevel(INT nLogLevel)
@@ -171,6 +206,10 @@ SnmpSvcSetLogLevel(INT nLogLevel)
     UNIMPLEMENTED
 }
 
+
+/*
+ * @unimplemented
+ */
 VOID
 SNMP_FUNC_TYPE
 SnmpSvcSetLogType(INT nLogType)
@@ -186,6 +225,10 @@ SnmpSvcSetLogType(INT nLogType)
     UNIMPLEMENTED
 }
 
+
+/*
+ * @unimplemented
+ */
 VOID
 SNMP_FUNC_TYPE
 SnmpTfxClose(void* unknown, void* unknown2)
@@ -193,6 +236,10 @@ SnmpTfxClose(void* unknown, void* unknown2)
     UNIMPLEMENTED
 }
 
+
+/*
+ * @unimplemented
+ */
 VOID
 SNMP_FUNC_TYPE
 SnmpTfxOpen(void* unknown, void* unknown2)
@@ -200,6 +247,10 @@ SnmpTfxOpen(void* unknown, void* unknown2)
     UNIMPLEMENTED
 }
 
+
+/*
+ * @unimplemented
+ */
 VOID
 SNMP_FUNC_TYPE
 SnmpTfxQuery(void* unknown, void* unknown2)
@@ -207,6 +258,10 @@ SnmpTfxQuery(void* unknown, void* unknown2)
     UNIMPLEMENTED
 }
 
+
+/*
+ * @unimplemented
+ */
 VOID
 SNMP_FUNC_TYPE
 SnmpUtilAnsiToUnicode(void* unknown, void* unknown2)
@@ -214,6 +269,10 @@ SnmpUtilAnsiToUnicode(void* unknown, void* unknown2)
     UNIMPLEMENTED
 }
 
+
+/*
+ * @unimplemented
+ */
 SNMPAPI
 SNMP_FUNC_TYPE
 SnmpUtilAsnAnyCpy(AsnAny *pAnyDst, AsnAny *pAnySrc)
@@ -222,6 +281,10 @@ SnmpUtilAsnAnyCpy(AsnAny *pAnyDst, AsnAny *pAnySrc)
     return 0;
 }
 
+
+/*
+ * @unimplemented
+ */
 VOID
 SNMP_FUNC_TYPE
 SnmpUtilAsnAnyFree(AsnAny *pAny)
@@ -229,6 +292,10 @@ SnmpUtilAsnAnyFree(AsnAny *pAny)
     UNIMPLEMENTED
 }
 
+
+/*
+ * @unimplemented
+ */
 VOID
 SNMP_FUNC_TYPE
 SnmpUtilDbgPrint(INT nLogLevel, LPSTR szFormat, ...)
@@ -250,6 +317,10 @@ SnmpUtilDbgPrint(INT nLogLevel, LPSTR szFormat, ...)
     UNIMPLEMENTED
 }
 
+
+/*
+ * @unimplemented
+ */
 LPSTR
 SNMP_FUNC_TYPE
 SnmpUtilIdsToA(UINT *Ids, UINT IdLength)
@@ -258,6 +329,10 @@ SnmpUtilIdsToA(UINT *Ids, UINT IdLength)
     return 0;
 }
 
+
+/*
+ * @unimplemented
+ */
 SNMPAPI
 SNMP_FUNC_TYPE
 SnmpUtilOctetsCmp(AsnOctetString *pOctets1, AsnOctetString *pOctets2)
@@ -266,6 +341,10 @@ SnmpUtilOctetsCmp(AsnOctetString *pOctets1, AsnOctetString *pOctets2)
     return 0;
 }
 
+
+/*
+ * @unimplemented
+ */
 SNMPAPI
 SNMP_FUNC_TYPE
 SnmpUtilOctetsCpy(AsnOctetString *pOctetsDst, AsnOctetString *pOctetsSrc)
@@ -274,6 +353,10 @@ SnmpUtilOctetsCpy(AsnOctetString *pOctetsDst, AsnOctetString *pOctetsSrc)
     return 0;
 }
 
+
+/*
+ * @unimplemented
+ */
 VOID
 SNMP_FUNC_TYPE
 SnmpUtilOctetsFree(AsnOctetString *pOctets)
@@ -281,6 +364,10 @@ SnmpUtilOctetsFree(AsnOctetString *pOctets)
     UNIMPLEMENTED
 }
 
+
+/*
+ * @unimplemented
+ */
 SNMPAPI
 SNMP_FUNC_TYPE
 SnmpUtilOctetsNCmp(AsnOctetString *pOctets1, AsnOctetString *pOctets2, UINT nChars)
@@ -289,6 +376,10 @@ SnmpUtilOctetsNCmp(AsnOctetString *pOctets1, AsnOctetString *pOctets2, UINT nCha
     return 0;
 }
 
+
+/*
+ * @unimplemented
+ */
 SNMPAPI
 SNMP_FUNC_TYPE
 SnmpUtilOidAppend(AsnObjectIdentifier *pOidDst, AsnObjectIdentifier *pOidSrc)
@@ -300,6 +391,9 @@ SnmpUtilOidAppend(AsnObjectIdentifier *pOidDst, AsnObjectIdentifier *pOidSrc)
 }
 
 
+/*
+ * @unimplemented
+ */
 SNMPAPI
 SNMP_FUNC_TYPE
 SnmpUtilOidCmp(AsnObjectIdentifier *pOid1, AsnObjectIdentifier *pOid2)
@@ -308,6 +402,10 @@ SnmpUtilOidCmp(AsnObjectIdentifier *pOid1, AsnObjectIdentifier *pOid2)
     return 0;
 }
 
+
+/*
+ * @unimplemented
+ */
 SNMPAPI
 SNMP_FUNC_TYPE
 SnmpUtilOidCpy(AsnObjectIdentifier *pOidDst, AsnObjectIdentifier *pOidSrc)
@@ -316,6 +414,10 @@ SnmpUtilOidCpy(AsnObjectIdentifier *pOidDst, AsnObjectIdentifier *pOidSrc)
     return 0;
 }
 
+
+/*
+ * @unimplemented
+ */
 VOID
 SNMP_FUNC_TYPE
 SnmpUtilOidFree(AsnObjectIdentifier *pOid)
@@ -323,6 +425,10 @@ SnmpUtilOidFree(AsnObjectIdentifier *pOid)
     UNIMPLEMENTED
 }
 
+
+/*
+ * @unimplemented
+ */
 SNMPAPI
 SNMP_FUNC_TYPE
 SnmpUtilOidNCmp(AsnObjectIdentifier *pOid1, AsnObjectIdentifier *pOid2, UINT nSubIds)
@@ -331,6 +437,10 @@ SnmpUtilOidNCmp(AsnObjectIdentifier *pOid1, AsnObjectIdentifier *pOid2, UINT nSu
     return 0;
 }
 
+
+/*
+ * @unimplemented
+ */
 LPSTR
 SNMP_FUNC_TYPE
 SnmpUtilOidToA(AsnObjectIdentifier *Oid)
@@ -339,6 +449,10 @@ SnmpUtilOidToA(AsnObjectIdentifier *Oid)
     return 0;
 }
 
+
+/*
+ * @unimplemented
+ */
 VOID
 SNMP_FUNC_TYPE
 SnmpUtilPrintAsnAny(AsnAny *pAny)
@@ -346,6 +460,10 @@ SnmpUtilPrintAsnAny(AsnAny *pAny)
     UNIMPLEMENTED
 }
 
+
+/*
+ * @unimplemented
+ */
 VOID
 SNMP_FUNC_TYPE
 SnmpUtilPrintOid(AsnObjectIdentifier *Oid)
@@ -353,6 +471,10 @@ SnmpUtilPrintOid(AsnObjectIdentifier *Oid)
     UNIMPLEMENTED
 }
 
+
+/*
+ * @unimplemented
+ */
 VOID
 SNMP_FUNC_TYPE
 SnmpUtilUTF8ToUnicode(void* unknown, void* unknown2)
@@ -360,6 +482,10 @@ SnmpUtilUTF8ToUnicode(void* unknown, void* unknown2)
     UNIMPLEMENTED
 }
 
+
+/*
+ * @unimplemented
+ */
 VOID
 SNMP_FUNC_TYPE
 SnmpUtilUnicodeToAnsi(void* unknown, void* unknown2)
@@ -367,6 +493,10 @@ SnmpUtilUnicodeToAnsi(void* unknown, void* unknown2)
     UNIMPLEMENTED
 }
 
+
+/*
+ * @unimplemented
+ */
 VOID
 SNMP_FUNC_TYPE
 SnmpUtilUnicodeToUTF8(void* unknown, void* unknown2)
@@ -374,6 +504,10 @@ SnmpUtilUnicodeToUTF8(void* unknown, void* unknown2)
     UNIMPLEMENTED
 }
 
+
+/*
+ * @unimplemented
+ */
 SNMPAPI
 SNMP_FUNC_TYPE
 SnmpUtilVarBindCpy(SnmpVarBind *pVbDst, SnmpVarBind *pVbSrc)
@@ -382,6 +516,10 @@ SnmpUtilVarBindCpy(SnmpVarBind *pVbDst, SnmpVarBind *pVbSrc)
     return 0;
 }
 
+
+/*
+ * @unimplemented
+ */
 VOID
 SNMP_FUNC_TYPE
 SnmpUtilVarBindFree(SnmpVarBind *pVb)
@@ -389,6 +527,10 @@ SnmpUtilVarBindFree(SnmpVarBind *pVb)
     UNIMPLEMENTED
 }
 
+
+/*
+ * @unimplemented
+ */
 SNMPAPI
 SNMP_FUNC_TYPE
 SnmpUtilVarBindListCpy(SnmpVarBindList *pVblDst, SnmpVarBindList *pVblSrc)
@@ -397,6 +539,10 @@ SnmpUtilVarBindListCpy(SnmpVarBindList *pVblDst, SnmpVarBindList *pVblSrc)
     return 0;
 }
 
+
+/*
+ * @unimplemented
+ */
 VOID
 SNMP_FUNC_TYPE
 SnmpUtilVarBindListFree(SnmpVarBindList *pVbl)
